[package]
name = "file_logger"
version = "0.1.0"
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
repository = "https://github.com/KeenS/file_logger"
keywords = ["log", "file"]
license-file = "LICENSE"
readme = "README.md"
description = "A simple logger backend that outputs to a file. \nThis is alpha state."

[dependencies]
toml = "0.1.23"
nom = "1.0.1"
time = "0.1.34"
regex = "0.1"
log = "0.3"
